--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div id="toast-container"></div>
     </main>
     <footer>
-
+        <div>&copy; 2023 Sai Kiran</div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"
