--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./loader.css">
     <script src="./scripts/constants.js" defer></script>
     <script src="./scripts/helper-function.js" defer></script>
     <script src="./scripts/dom.js" defer></script>
@@ -28,6 +29,9 @@
             <div class="pattern-bg-img"></div>
             <div class="ip-container">
                 <h1 class="mb-3">IP Address Tracker</h1>
+                <div id="loader-overlay" class="overlay d-none">
+                    <span class="loader"></span>
+                </div>
                 <form>
                     <div class="form-group">
                         <label for="ip-tracker-input" class="d-none">IP Tracker</label>
