--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- Modal -->
         <div class="modal fade" id="HistoryModal" tabindex="-1" role="dialog" aria-labelledby="HistoruModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="HistoruModalLabel">History</h5>
@@ -67,7 +67,6 @@
                         </button>
                     </div>
                     <div class="history-modal-body" id="history-modal-body">
-
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -77,7 +76,14 @@
         </div>
 
         <!-- The toast container -->
-        <div id="toast-container"></div>
+        <!-- <div id="toast-container"></div> -->
+        <div id="toaster-container">
+            <div class="toaster-icon"></div>
+            <div class="toaster-content">
+                <h2 id="toaster-heading" class="toaster-heading"></h2>
+                <p id="toaster-message" class="toaster-message"></p>
+            </div>
+        </div>
     </main>
     <footer>
         <div>&copy; 2023 Sai Kiran</div>
